fix: [PL-27889]: fixed template name to show in single line with ellipses and blurring of dropdown (#10952)
* fix: [PL-27889]: fixed lineclamp of template name and blurring of dropdown

* fix: [PL-27889]: fix test cases for template details file

--- a/src/modules/72-templates-library/components/TemplateDetails/TemplateDetails.module.scss
+++ b/src/modules/72-templates-library/components/TemplateDetails/TemplateDetails.module.scss
@@ -116,3 +116,10 @@
 .yamlLoader {
   min-height: 300px !important;
 }
+.versionListContainer {
+  :global {
+    .bp3-overlay {
+      z-index: 30 !important;
+    }
+  }
+}
